# ml-prod-practice

./: .gitignore  collections_loader.py  config.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py
notebooks/: prototype.ipynb
