[project]
name = "prod"
version = "0.1.0"
description = ""
authors = [
    {name = "HayBeeCoder",email = "haybeecodes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
